# QtTranslatorExampleWithCMake

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindow_en.ts  MainWindow_zh.ts  READMe.md  Resources.qrc  main.cpp
